{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Game",
            "id": "04345d63-dbcb-458b-b37d-aeec04de5a1d",
            "actions": [
                {
                    "name": "PointerMove",
                    "type": "Value",
                    "id": "d354a717-6456-4545-9597-7abe2ba43d5b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "PointerDown",
                    "type": "Button",
                    "id": "ccf9e6fb-70f7-4dc6-9b59-8e197b9d4677",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PointerUp",
                    "type": "Button",
                    "id": "6240fc88-5480-46c7-8f42-8d7a2363e585",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "70be9434-7a37-4b21-af52-d0d6aa936d46",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa29522a-f14f-4b00-8886-afc66976c6d9",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "addb5732-1d0b-44e3-a5f0-43f0d5d6e2ce",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ed89b9cd-72e4-422f-9bf1-6dcfe64f122f",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PointerDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "905270c4-0f78-461b-9b87-cc980402b4fb",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "PointerUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bd919a22-4479-4549-a733-a2e1ea0b437d",
                    "path": "<Touchscreen>/primaryTouch/press",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "PointerUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}